fix: center alignment on mobile page

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -7,14 +7,20 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    transform: scale(1.2);
-    transform-origin: center;
+    transform-origin: center center;
 }
 
 h1, h2, h3 {
     text-align: center;
     margin-bottom: 20px;
 }
+
+@media (max-width: 1000px) {
+    .registration-form, .login-container {
+        transform: scale(2);
+    }
+}
+
 
 .login-container, .registration-form {
     background-color: white;
@@ -23,13 +29,6 @@ h1, h2, h3 {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     width: 100%;
     max-width: 400px;
-}
-
-@media (max-width: 600px) {
-    .registration-form, .login-container {
-        width: 100%;
-        padding: 20px;
-    }
 }
 
 .login-container {
